--- a/ruoyi-wx/pom.xml
+++ b/ruoyi-wx/pom.xml
@@ -17,6 +17,10 @@
             <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.3.0</version>
+        </dependency>
     </dependencies>
-
 </project>
