--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -15,6 +15,11 @@ ruoyi:
   # 验证码类型 math 数组计算 char 字符验证
   captchaType: math
 
+  # 小程序appid
+  wechatAppid: wxb6f841676594c1f2
+  # 小程序Secret
+  wechatSecret: 39357557899671b926a65a33f59ccbd8
+
 # 开发环境配置
 server:
   # 服务器的HTTP端口，默认为8080
@@ -129,9 +134,3 @@ xss:
   excludes: /system/notice
   # 匹配链接
   urlPatterns: /system/*,/monitor/*,/tool/*
-
-wechat:
-  # 小程序appid
-  appid: wxb6f841676594c1f2
-  # 小程序Secret
-  secret: 39357557899671b926a65a33f59ccbd8
